apps/fitness-coach/open-wearables/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: open-wearables
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
        - name: backend
          image: ghcr.io/flordebruyne/open-wearables:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          command: ["/bin/sh", "-c", "scripts/start/app.sh"]
